kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rusyweb
  labels:
    app: rustyweb
spec:
  selector:
    matchLabels:
      app: rustyweb
  template:
    metadata:
      labels:
        app: rustyweb
    spec:
      containers:
      - name: app
        image: us-east1-docker.pkg.dev/prod-prototype/default/rustyweb:next
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
