kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustyweb
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: rustyweb
