kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rustyweb-http-ingress
  annotations:
    konghq.com/protocols: http
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /rustyweb
        pathType: Prefix
        backend:
          service:
            name: rustyweb
            port:
              number: 80
